2.33 (0000-00-00)
Modules:
- Dimensions and Units: It is possible to set the pixel size to match exactly
  another channel.
- TIA SER: spectral arrays reimplemented as volume data.


2.32 (2013-09-08)
Application:
- GLib 2.14 is now required.
- Translations updated: Czech, French, Russian, Spanish.
- Metadata browser is no longer present in Meta menu.  Access it via the
  right-click (Shift-F10) context menu of data (and volume) windows.

Libraries:
- libgwydgets: 3D view can display data overlays without any lighting.
- libgwydgets: Unwanted window dragging with KDE oxygen theme was hopefully
  fixed.
- libgwyapp: Support for volume data and functions were added to the data
  browser and menu constructors.
- libgwymodule: Volume data processing module management functions were added.
- libgwyprocess: Summary statistical functions for bricks were added.
- libgwyapp: Toolbox items sensitivity corresponds to data available in the
  current file, not globally.  This fixes a long-standing bug when it was
  possible to run a module function for a type of data for which
  gwy_app_data_browser_get_current() did not actually give anything.
- libgwyapp: Public functions to display metadata browser were added.
- libgwyapp: Editing data titles in data browser can be invoked using mouse
  again (a double-click activation followed by a normal click).
- libgwydgets: Graph PostScript tries to avoid some non-ASCII characters; the
  key position was corrected fixed.
- libgwyprocess: 2D ACF normalisation (off by 1/√xres) was corrected.
- libgwydgets: Data window updates color axis range also after resize, fixing
  range not being updated after an in-place Crop.

Modules:
- Volumize (new): Create a simple 3D volume data from 2D data.
- Volumize_layers (new): Create 3D volume data from set of 2D data.
- Show and extract (new): Show 3D volume data and extract some projections.
- Volume invert (new): Invert value in a 3D volume.
- Tescan (new): Imports Tescan MIRA SEM images.