@@ -3,6 +3,8 @@ Modules:
 - Dimensions and Units: It is possible to set the pixel size to match exactly
   another channel.
 - TIA SER: spectral arrays reimplemented as volume data.
+- Merge: Pixel size of images created in ‘None’ merge mode correspond to
+  pixel size of the merged images.
 
 
 2.32 (2013-09-08)
